fix: update outdated awesome fonts link

--- a/sign_up_form/01/index.html
+++ b/sign_up_form/01/index.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/f97e81058f.js" crossorigin="anonymous"></script>
     <!-- <link rel="icon" href="favicon.ico" type="image/x-icon"/>  -->
     <link rel="stylesheet" href="style.css">
-    <title>My Project</title>
+    <title>01 Sign Up Form</title>
 
 </head>
 <body>
