--- a/sign_up_form/02/index.html
+++ b/sign_up_form/02/index.html
@@ -60,3 +60,5 @@
     <!-- <script src="script.js"></script> -->
 </body>
 </html>
+
+<!-- Design idea from: https://dribbble.com/shots/14455889-Sign-Up-Form-->
