fix: get rid of outline on select

--- a/sign_up_form/02/index.html
+++ b/sign_up_form/02/index.html
@@ -57,8 +57,13 @@
         </div>
     </div>
 
+    <div class="credits">
+        <a href="https://www.freepik.com/vectors/business">Business vector created by jcomp - www.freepik.com</a>
+        <a href="https://dribbble.com/shots/14455889-Sign-Up-Form">Design by Emilia Nerisnitsa - www.dribble.com</a>
+    </div>
+    
+
     <!-- <script src="script.js"></script> -->
 </body>
 </html>
 
-<!-- Design idea from: https://dribbble.com/shots/14455889-Sign-Up-Form-->
