feat: add logo and finish styling input tags

--- a/login_form/01/index.html
+++ b/login_form/01/index.html
@@ -13,8 +13,10 @@
 <body>
     <div class="container">
         <div class="left">
-            <!-- <img src="" alt=""> -->
-            <span class="logo">Kafh</span>
+            <div class="logo">
+                <img src="logo1.svg" alt="">
+                <span>Kafh</span>
+            </div>
             <div class="top">
                 <h1>Welcome Back!</h1>
                 <p>Please Log in to your account.</p>
@@ -22,12 +24,12 @@
 
             <div class="inputs">
                 <label id="email-label" for="email">
-                    Email Address
-                    <input id="email" type="email" placeholder="username@mail.com">
+                    <span>Email Address</span>
+                    <input id="email" type="email" placeholder="username@mail.com" autocomplete="on">
                 </label>
                 <label id="password-label" for="password">
-                    Password
-                    <input id="password" type="password" placeholder="★★★★★★">
+                    <span>Password</span>
+                    <input id="password" type="password" placeholder="★★★★★★" autocomplete="on">
                 </label>
             </div>
 
