--- a/login_form/01/index.html
+++ b/login_form/01/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/f97e81058f.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="favicon.ico" type="image/x-icon"/> 
+    <!-- <link rel="icon" href="favicon.ico" type="image/x-icon"/>  -->
     <link rel="stylesheet" href="style.css">
     <title>01 Login Form</title>
 
