fix: change the title

--- a/navbar/01/index.html
+++ b/navbar/01/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/f97e81058f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Navbar #01</title>
 </head>
 <body>
     <div class="container">
