fix: credits link

--- a/navbar/02/index.html
+++ b/navbar/02/index.html
@@ -124,7 +124,7 @@
 
         <div class="credits">
             <!-- <a href="https://www.freepik.com/vectors/business">Business vector created by jcomp - www.freepik.com</a> -->
-            <a href="https://dribbble.com/shots/15401091-Navigation-Bar/attachments/7166424?mode=media">Design by Halal Lab - www.dribble.com</a>
+            <a href="https://dribbble.com/shots/15401091-Navigation-Bar/attachments/7166424?mode=media" target="_blank">Design by Halal Lab - www.dribble.com</a>
         </div>
     </main>
 
