feat: add responsive styling and navigation button

--- a/navbar/03/index.html
+++ b/navbar/03/index.html
@@ -15,12 +15,13 @@
     <title>Navbar #03</title>
 </head>
 <body>
-    <header>
+    <header id="header">
         <div class="logo">
             <i class="fab fa-pagelines"></i>
             <span>ForestLock</span>
         </div>
-        <nav>
+
+        <nav id="nav">
             <ul>
                 <li ><a href="#">Story</a></li>
                 <li ><a href="#">About</a></li>
@@ -29,6 +30,8 @@
                 <li ><a href="#">Contact us</a></li>
             </ul>
         </nav>
+        <button id="nav_btn"><i class="fas fa-bars"></i></button>
+
     </header>
     <main>
         <h1>The secret of the <br> forbidden forest</h1>
@@ -38,7 +41,7 @@
             <button>Watch video →</button>
         </div>
     </main>
-    
+    <script src="script.js"></script>
     
 </body>
 </html>
